--- a/assets/json/projects.json
+++ b/assets/json/projects.json
@@ -4,14 +4,19 @@
     "name": "Stellar Interactiv",
     "slug": "stellar-interactiv",
     "category": "web development",
-    "image" : "./assets/img/works-stellar-interactiv.jpg",
+    "thumbnail" : "./assets/img/projects/stellar-interactiv/stellar_interactiv_1.png",
+    "imgs": [
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_1.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png"
+    ],
     "projectURL" : "https://stellar-interactiv.com/",
-    "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
+    "description": "Stellar interactiv creates digital solutions for healthcare professionnals. My job was to integrate XD mock-up made by a webdesigner using HTML, CSS and native Javascript",
     "type": "Work",
-    "done": [
-      "HTML",
-      "CSS",
-      "JS"  
+    "used": [
+      "HTML/CSS",
+      "Native Javascript",
+      "Adobe XD"
     ]
   },
   {
@@ -19,10 +24,15 @@
     "name": "Interactive banners",
     "slug": "interactive-banners",
     "category": "web development",
-    "image" : "./assets/img/works-netexplo.png",
+    "thumbnail" : "./assets/img/works-netexplo.png",
+    "imgs": [
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_1.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png"
+    ],
     "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
     "type": "Work",
-    "done": [
+    "used": [
       "HTML",
       "CSS",
       "JS : Anime JS and/or Vue JS"  
@@ -33,10 +43,15 @@
     "name": "Netexplo App",
     "slug": "netexplo-app",
     "category": "UX - UI",
-    "image" : "./assets/img/works-netexplo.png",
+    "thumbnail" : "./assets/img/works-netexplo.png",
+    "imgs": [
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_1.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png"
+    ],
     "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
     "type": "School",
-    "done": [
+    "used": [
       "UX Thinking",
       "Wireframe : XD",
       "Prototype : XD"
@@ -47,10 +62,15 @@
     "name": "Swapup App",
     "slug": "swapup-app",
     "category": "UX - UI & web development",
-    "image" : "./assets/img/works-netexplo.png",
+    "thumbnail" : "./assets/img/works-netexplo.png",
+    "imgs": [
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_1.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png",
+      "./assets/img/projects/stellar-interactiv/stellar_interactiv_3.png"
+    ],
     "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.",
     "type": "School",
-    "done": [
+    "used": [
       "UX Thinking",
       "Wireframe : XD",
       "Prototype : XD",
